--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -5,8 +5,10 @@ on: [push]
 jobs:
   laravel-tests:
     runs-on: ubuntu-latest
+
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout code
+      uses: actions/checkout@v2
 
     - name: Setup PHP
       uses: shivammathur/setup-php@v2
@@ -20,6 +22,16 @@ jobs:
 
     - name: Generate key
       run: php artisan key:generate
+
+    - name: Copy .env file
+      run: cp .env.example .env
+
+    - name: Configure .env file
+      run: |
+        echo "APP_ENV=testing" >> .env
+        echo "DB_DATABASE=sikades" >> .env
+        echo "DB_USERNAME=root" >> .env
+        echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> .env
 
     - name: Migrate database
       run: php artisan migrate --force
