--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -7,34 +7,34 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Setup PHP
-      uses: shivammathur/setup-php@v2
-      with:
-        php-version: '8.2'
-        extensions: mbstring, pdo_mysql
-        tools: composer:v2
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: "8.2"
+          extensions: mbstring, pdo_mysql
+          tools: composer:v2
 
-    - name: Install dependencies
-      run: composer install --no-progress --prefer-dist --optimize-autoloader
+      - name: Install dependencies
+        run: composer install --no-progress --prefer-dist --optimize-autoloader
 
-    - name: Generate key
-      run: php artisan key:generate
+      - name: Generate key
+        run: php artisan key:generate
 
-    - name: Copy .env file
-      run: cp .env.example .env
+      - name: Copy .env file
+        run: cp .env.example .env
 
-    - name: Configure .env file
-      run: |
-        echo "APP_ENV=testing" >> .env
-        echo "DB_DATABASE=sikades" >> .env
-        echo "DB_USERNAME=root" >> .env
-        echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> .env
+      - name: Configure .env file
+        run: |
+          echo "APP_ENV=testing" >> .env
+          echo "DB_DATABASE=sikades" >> .env
+          echo "DB_USERNAME=root" >> .env
+          echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> .env
 
-    - name: Migrate database
-      run: php artisan migrate --force
+      - name: Migrate database
+        run: php artisan migrate --force
 
-    - name: Run tests
-      run: vendor/bin/phpunit
+      - name: Run tests
+        run: vendor/bin/phpunit
