--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -5,36 +5,71 @@ on: [push]
 jobs:
   laravel-tests:
     runs-on: ubuntu-latest
+    services:
+      mysql:
+        image: mysql:8.0
+        env:
+          MYSQL_ROOT_PASSWORD: ${{ secrets.DB_PASSWORD }}
+          MYSQL_DATABASE: sikades
+        ports:
+          - 3306:3306
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: "8.2"
-          extensions: mbstring, pdo_mysql
+          php-version: '8.2'
+          extensions: mbstring, pdo_mysql, dom, fileinfo, openssl
+          ini-values: memory_limit=512M
+          coverage: none
           tools: composer:v2
 
+      - name: Get Composer Cache Directory
+        id: composer-cache
+        run: echo "dir=$(composer config cache-files-dir)" >> $GITHUB_OUTPUT
+
+      - name: Cache dependencies
+        uses: actions/cache@v3
+        with:
+          path: ${{ steps.composer-cache.outputs.dir }}
+          key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-composer-
+
       - name: Install dependencies
-        run: composer install --no-progress --prefer-dist --optimize-autoloader
-
-      - name: Generate key
-        run: php artisan key:generate
-
-      - name: Copy .env file
-        run: cp .env.example .env
-
-      - name: Configure .env file
         run: |
-          echo "APP_ENV=testing" >> .env
-          echo "DB_DATABASE=sikades" >> .env
-          echo "DB_USERNAME=root" >> .env
-          echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> .env
+          composer validate
+          composer install --no-progress --prefer-dist --optimize-autoloader --no-interaction
 
-      - name: Migrate database
-        run: php artisan migrate --force
+      - name: Prepare environment
+        run: |
+          cp .env.example .env.test
+          echo "APP_ENV=testing" >> .env.test
+          echo "APP_KEY=" >> .env.test
+          echo "DB_CONNECTION=mysql" >> .env.test
+          echo "DB_HOST=mysql" >> .env.test
+          echo "DB_PORT=3306" >> .env.test
+          echo "DB_DATABASE=sikades" >> .env.test
+          echo "DB_USERNAME=root" >> .env.test
+          echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> .env.test
+          php artisan key:generate --env=testing
 
-      - name: Run tests
-        run: vendor/bin/phpunit
+      - name: Execute tests
+        env:
+          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+        run: |
+          php artisan config:clear
+          php artisan migrate:fresh --env=testing --force
+          vendor/bin/phpunit --verbose --coverage-clover=coverage.xml
+
+      - name: Upload coverage to Codecov (optional)
+        uses: codecov/codecov-action@v3
+        if: success()
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          file: coverage.xml
+          flags: unittests
