--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -2,6 +2,9 @@ name: Laravel CI
 
 on: [push]
 
+env:
+  DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+
 jobs:
   laravel-tests:
     runs-on: ubuntu-latest
@@ -9,15 +12,11 @@ jobs:
       mysql:
         image: mysql:8.0
         env:
-          MYSQL_ROOT_PASSWORD: ${{ secrets.DB_PASSWORD }}
+          MYSQL_ROOT_PASSWORD: ${{ env.DB_PASSWORD }}
           MYSQL_DATABASE: sikades
-          MYSQL_USER: root
-          MYSQL_PASSWORD: ${{ secrets.DB_PASSWORD }}
         ports:
           - 3306:3306
-        options: --health-cmd="mysqladmin ping -uroot -p${{ secrets.DB_PASSWORD }}" --health-interval=10s --health-timeout=5s --health-retries=5
-        volumes:
-          - mysql-data:/var/lib/mysql
+        options: --health-cmd="mysqladmin ping -uroot -p${{ env.DB_PASSWORD }}" --health-interval=10s --health-timeout=5s --health-retries=5
 
     steps:
       - name: Checkout code
@@ -59,12 +58,10 @@ jobs:
           echo "DB_PORT=3306" >> .env.test
           echo "DB_DATABASE=sikades" >> .env.test
           echo "DB_USERNAME=root" >> .env.test
-          echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> .env.test
+          echo "DB_PASSWORD=${{ env.DB_PASSWORD }}" >> .env.test
           php artisan key:generate --env=testing
 
       - name: Execute tests
-        env:
-          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
         run: |
           php artisan config:clear
           php artisan migrate:fresh --env=testing --force
