--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -20,6 +20,13 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Setup CA Certificate
+        run: |
+          sudo cp cacert.pem /usr/local/share/ca-certificates/
+          sudo update-ca-certificates
+          export SSL_CERT_FILE=/usr/local/share/ca-certificates/cacert.pem
+          echo "SSL_CERT_FILE=/usr/local/share/ca-certificates/cacert.pem" >> $GITHUB_ENV
+
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
@@ -28,11 +35,12 @@ jobs:
           ini-values: memory_limit=512M
           coverage: none
           tools: composer:v2
+        env:
+          SSL_CERT_FILE: ${{ env.SSL_CERT_FILE }}
 
       - name: Get Composer Cache Directory
         id: composer-cache
         run: |
-          echo "dir=$(composer config cache-files-dir)" >> $GITHUB_ENV
           echo "COMPOSER_CACHE_DIR=$(composer config cache-files-dir)" >> $GITHUB_ENV
 
       - name: Cache dependencies
@@ -45,6 +53,7 @@ jobs:
 
       - name: Install dependencies
         run: |
+          composer config --global cafile /usr/local/share/ca-certificates/cacert.pem
           composer validate --no-check-all --no-check-publish
           composer install --no-progress --prefer-dist --optimize-autoloader
 
