--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -1,100 +1,84 @@
-name: Laravel CI/CD Pipeline
+name: Laravel Docker CI/CD
 
-on: [push]
+on:
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 env:
-  DB_HOST: mysql
-  DB_PORT: 3306
-  DB_DATABASE: sikades
-  DB_USERNAME: root
-  DB_PASSWORD: rootpassword
+  DOCKER_IMAGE_NAME: your-dockerhub-username/laravel-app
+  DOCKER_TAG: latest
 
 jobs:
-  laravel-tests:
+  test:
     runs-on: ubuntu-latest
 
     services:
       mysql:
-        image: mysql:8.0
+        image: mysql:5.7
         env:
-          MYSQL_ROOT_PASSWORD: rootpassword
-          MYSQL_DATABASE: sikades
+          MYSQL_ROOT_PASSWORD: secret
+          MYSQL_DATABASE: laravel
+          MYSQL_USER: laravel
+          MYSQL_PASSWORD: secret
         ports:
           - 3306:3306
-        options: --health-cmd="mysqladmin ping -uroot -prootpassword" --health-interval=10s --health-timeout=5s --health-retries=5
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+    - uses: actions/checkout@v4
 
-      - name: Setup system dependencies
-        run: |
-          sudo apt-get update -y
-          sudo apt-get install -y ca-certificates openssl
-          sudo update-ca-certificates --fresh
-          export SSL_CERT_FILE=/etc/ssl/certs/ca-certificates.crt
-          echo "SSL_CERT_FILE=/etc/ssl/certs/ca-certificates.crt" >> $GITHUB_ENV
+    - name: Set up PHP
+      uses: shivammathur/setup-php@v2
+      with:
+        php-version: '8.4'
+        extensions: mbstring, xml, mysql, pdo, tokenizer, ctype, json, bcmath, openssl, gd, zip, intl
+        coverage: none
 
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: '8.2'
-          extensions: mbstring, pdo_mysql, dom, fileinfo, openssl, gd, zip
-          ini-values: |
-            memory_limit=512M
-            openssl.cafile=/etc/ssl/certs/ca-certificates.crt
-            curl.cainfo=/etc/ssl/certs/ca-certificates.crt
-          coverage: none
-          tools: composer:v2
+    - name: Copy .env
+      run: |
+        cp .env.example .env
+        sed -i 's/DB_HOST=.*/DB_HOST=mysql/' .env
+        sed -i 's/DB_DATABASE=.*/DB_DATABASE=laravel/' .env
+        sed -i 's/DB_USERNAME=.*/DB_USERNAME=laravel/' .env
+        sed -i 's/DB_PASSWORD=.*/DB_PASSWORD=secret/' .env
+        echo "SSL_CA=/usr/local/etc/ssl/certs/cacert.pem" >> .env
 
-      - name: Configure Composer
-        run: |
-          composer config --global cafile $SSL_CERT_FILE
-          composer config --global disable-tls false
-          composer config --global secure-http true
-          composer --version
-          composer diagnose
+    - name: Install dependencies
+      run: |
+        composer install --prefer-dist --no-interaction
+        php artisan key:generate
 
-      - name: Setup Composer cache
-        id: composer-cache
-        run: |
-          echo "dir=$(composer config cache-files-dir)" >> $GITHUB_OUTPUT
-          echo "COMPOSER_CACHE_DIR=$(composer config cache-files-dir)" >> $GITHUB_ENV
+    - name: Run migrations
+      run: php artisan migrate --force
 
-      - name: Cache dependencies
-        uses: actions/cache@v3
-        with:
-          path: ${{ steps.composer-cache.outputs.dir }}
-          key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-composer-
+    - name: Execute tests
+      run: php artisan test
 
-      - name: Install dependencies
-        run: |
-          composer install --no-progress --prefer-dist --optimize-autoloader --no-interaction
+  build-and-push:
+    needs: test
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main'
 
-      - name: Prepare environment
-        run: |
-          cp .env.example .env.test
-          echo "APP_ENV=testing" >> .env.test
-          echo "DB_CONNECTION=mysql" >> .env.test
-          echo "DB_HOST=${{ env.DB_HOST }}" >> .env.test
-          echo "DB_PORT=${{ env.DB_PORT }}" >> .env.test
-          echo "DB_DATABASE=${{ env.DB_DATABASE }}" >> .env.test
-          echo "DB_USERNAME=${{ env.DB_USERNAME }}" >> .env.test
-          echo "DB_PASSWORD=${{ env.DB_PASSWORD }}" >> .env.test
-          php artisan key:generate --env=testing --force
+    steps:
+    - uses: actions/checkout@v4
 
-      - name: Execute tests
-        run: |
-          php artisan config:clear
-          php artisan migrate:fresh --env=testing --force
-          vendor/bin/phpunit --verbose --coverage-clover=coverage.xml
+    - name: Login to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKER_HUB_USERNAME }}
+        password: ${{ secrets.DOCKER_HUB_TOKEN }}
 
-      - name: Upload coverage to Codecov
-        if: success()
-        uses: codecov/codecov-action@v3
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          file: coverage.xml
-          flags: unittests
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+
+    - name: Build and push Docker image
+      uses: docker/build-push-action@v5
+      with:
+        context: .
+        push: true
+        tags: ${{ env.DOCKER_IMAGE_NAME }}:${{ env.DOCKER_TAG }}
+        file: ./Dockerfile
+        secrets: |
+          "GIT_AUTH_TOKEN=${{ secrets.GIT_AUTH_TOKEN }}"
