--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -47,6 +47,13 @@ jobs:
 
     - name: Install dependencies
       run: |
+        # Set CA file untuk Composer
+        composer config -g cafile $(pwd)/cacert.pem
+        # Verifikasi file CA ada
+        if [ ! -f cacert.pem ]; then
+          echo "Error: cacert.pem not found!"
+          exit 1
+        fi
         composer install --prefer-dist --no-interaction
         php artisan key:generate
 
