--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,37 +1,55 @@
-version: '3.8'
-
 services:
   app:
     build:
       context: .
       dockerfile: Dockerfile
+    container_name: sikades-app
     ports:
       - "9000:9000"
     volumes:
       - .:/var/www/html
-    networks:
-      - laravel
+      - /var/www/html/vendor
     environment:
+      APP_ENV: local
+      APP_DEBUG: "true"
       DB_HOST: db
       DB_PORT: 3306
-      DB_DATABASE: laravel
-      DB_USERNAME: laravel
+      DB_DATABASE: sikades
+      DB_USERNAME: sikades_user  # Ubah dari root ke user khusus aplikasi
       DB_PASSWORD: secret
+    depends_on:
+      db:
+        condition: service_healthy
+    networks:
+      - laravel
+    restart: unless-stopped
 
   db:
     image: mysql:8.0
+    container_name: sikades-db
     environment:
       MYSQL_ROOT_PASSWORD: secret
-      MYSQL_DATABASE: laravel
-      MYSQL_USER: laravel
+      MYSQL_DATABASE: sikades
+      MYSQL_USER: sikades_user
       MYSQL_PASSWORD: secret
+      MYSQL_ROOT_HOST: '%'  # Memungkinkan akses root dari host manapun
     ports:
-      - "3307:3306"
+      - "3307:3306"  # Ubah port eksternal untuk hindari konflik
+    volumes:
+      - mysql_data:/var/lib/mysql
+      - ./mysql/my.cnf:/etc/mysql/conf.d/custom.cnf  # Konfigurasi custom MySQL
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-psecret"]
+      interval: 5s
+      timeout: 10s
+      retries: 10
     networks:
       - laravel
+    restart: unless-stopped
 
   nginx:
     image: nginx:alpine
+    container_name: sikades-nginx
     ports:
       - "8080:80"
     volumes:
@@ -39,9 +57,14 @@ services:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - app
-      - db
     networks:
       - laravel
+    restart: unless-stopped
+
+volumes:
+  mysql_data:
+    driver: local
 
 networks:
   laravel:
+    driver: bridge
