--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -25,13 +25,21 @@ jobs:
     - name: Setup Docker
       uses: docker/setup-buildx-action@v2
 
+    - name: Install Docker Compose
+      run: |
+        sudo curl -L "https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+        sudo chmod +x /usr/local/bin/docker-compose
+        docker-compose --version
+
     - name: Build and run containers
       run: |
         docker-compose -f docker-compose.ci.yml up -d --build
         docker ps -a
+        sleep 10 # Tunggu service ready
 
-    - name: Run tests
+    - name: Run migrations and tests
       run: |
+        docker-compose -f docker-compose.ci.yml exec app php artisan migrate --force
         docker-compose -f docker-compose.ci.yml exec app php artisan test
 
   deploy:
