--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   app:
     build:
@@ -15,6 +13,8 @@ services:
     depends_on:
       mysql:
         condition: service_healthy
+    networks:
+      - laravel-test
 
   mysql:
     image: mysql:8.0
@@ -26,3 +26,9 @@ services:
       interval: 5s
       timeout: 10s
       retries: 3
+    networks:
+      - laravel-test
+
+networks:
+  laravel-test:
+    driver: bridge
