--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -5,6 +5,7 @@ services:
       dockerfile: Dockerfile
     environment:
       APP_ENV: testing
+      APP_KEY: ${APP_KEY:-base64:randomkey}
       DB_HOST: mysql
       DB_PORT: 3306
       DB_DATABASE: sikades_testing
